# movie_data_analysis_platform

./: .dockerignore  .editorconfig  .env  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  REQUIREMENTS_ANALYSIS.md  docker-compose.yml  movie_data_analysis_report.ipynb  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.cfg  setup.py  test_all_endpoints.py  test_error_cases.py  test_improvements.py
src/: cli.py  main.py  py.typed
src/api/routes/: analysis.py  data_processing.py  health.py  home.py  recommendations.py
src/core/: config.py
src/exceptions/: __init__.py  data_exceptions.py
src/models/: __init__.py  analysis.py  data_processing.py  health.py  recommendations.py
src/services/: data_processor.py  data_visualizer.py  movie_analyzer.py  recommender.py
src/utils/: logger.py
tests/: conftest.py
tests/integration/: test_all_endpoints.py  test_error_cases.py
tests/performance/: test_performance.py
tests/unit/: test_data_processor.py  test_data_visualizer.py  test_movie_analyzer.py  test_recommender.py
