[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-data-analysis-platform"
version = "1.0.0"
description = "Advanced data analysis platform for MovieLens dataset with ML recommendations"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["data-analysis", "machine-learning", "movies", "recommendation-system", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "fastapi>=0.85.0",
    "pydantic>=1.10.0",
    "uvicorn>=0.18.0",
    "python-dotenv>=0.19.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.20.0",
    "flake8>=5.0.0",
    "black>=22.0.0",
    "isort>=5.11.0",
    "mypy>=0.990",
    "pre-commit>=2.20.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.20.0",
    "httpx>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/movie-data-analysis-platform"
Documentation = "https://github.com/yourusername/movie-data-analysis-platform#readme"
Repository = "https://github.com/yourusername/movie-data-analysis-platform"
"Bug Tracker" = "https://github.com/yourusername/movie-data-analysis-platform/issues"


# ==============================================================================
# Black - Code Formatter
# ==============================================================================
[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | data
  | logs
)/
'''


# ==============================================================================
# isort - Import Sorter
# ==============================================================================
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip_glob = [
    "**/.venv/*",
    "**/venv/*",
    "**/data/*",
    "**/logs/*",
]
known_first_party = ["src"]
known_third_party = [
    "fastapi",
    "pydantic",
    "pandas",
    "numpy",
    "sklearn",
    "matplotlib",
    "seaborn",
    "plotly",
]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]


# ==============================================================================
# mypy - Static Type Checker
# ==============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true

# Module-specific overrides
[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false


# ==============================================================================
# pytest - Testing Framework
# ==============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for API endpoints",
    "slow: Slow-running tests",
    "performance: Performance and benchmarking tests",
    "data_processing: Tests for data processing functionality",
    "analysis: Tests for data analysis functionality",
    "visualization: Tests for visualization functionality",
    "recommender: Tests for recommendation system",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]


# ==============================================================================
# Coverage - Code Coverage
# ==============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    "*/setup.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"


# ==============================================================================
# pylint - Code Analysis
# ==============================================================================
[tool.pylint.main]
jobs = 0
suggestion-mode = true
unsafe-load-any-extension = false

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 120


# ==============================================================================
# bandit - Security Linter
# ==============================================================================
[tool.bandit]
exclude_dirs = [
    "tests/",
    ".venv/",
    "venv/",
]
skips = ["B101", "B601"]
