# setup.cfg - Additional setuptools configuration
# Most configuration is in pyproject.toml

[metadata]
name = movie-data-analysis-platform
version = attr: src.__version__
description = Advanced data analysis platform for MovieLens dataset with ML recommendations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/movie-data-analysis-platform
author = Your Name
author_email = your.email@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: FastAPI
    Framework :: Pytest

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
zip_safe = False

[options.packages.find]
where = .
include = src*
exclude = tests*, docs*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    isort>=5.11.0
    flake8>=5.0.0
    mypy>=0.990

[bdist_wheel]
universal = 0

[egg_info]
tag_build =
tag_date = 0
